--- a/Pipfile
+++ b/Pipfile
@@ -3,6 +3,9 @@ name = "pypi"
 url = "https://pypi.org/simple"
 verify_ssl = true
 
+[scripts]
+startlocaldb = "mongod --dbpath=./db"
+
 [dev-packages]
 
 [packages]
